Fix navigation external link alignment

--- a/assets/css/extended/nav-i18n.css
+++ b/assets/css/extended/nav-i18n.css
@@ -13,6 +13,7 @@
 #menu a {
     display: inline-flex;
     align-items: center;
+    line-height: 1;
 }
 
 #menu .menu-link-content {
@@ -32,6 +33,21 @@
 }
 
 #menu .menu-icon svg {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+#menu .menu-external-icon {
+    display: inline-flex;
+    width: 0.78em;
+    height: 0.78em;
+    align-items: center;
+    justify-content: center;
+    flex: 0 0 auto;
+}
+
+#menu .menu-external-icon svg {
     display: block;
     width: 100%;
     height: 100%;
